--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
                     </div>
                 </div>
             </div>
+            <aside class="contact-sidebar">
+                <h3>Quick Contact</h3>
+                <p>Email: <a href="mailto:nick@sysfx.net" class="email-link">nick@sysfx.net</a></p>
+                <p>Phone: <a href="tel:+18603754425" aria-label="Call sysfx at (860) 375-4425">(860) 375-4425</a></p>
+                <p>Address: 123 Main Street, Clinton, CT</p>
+            </aside>
         </section>
     </main>
 
