--- a/index.html
+++ b/index.html
@@ -237,6 +237,24 @@
             <button class="modern-button" onclick="location.href='#contact'">View All Events</button>
         </section>
 
+        <!-- New Case Studies Section -->
+        <section id="case-studies" class="case-studies glass-morphism parallax">
+            <h2 class="gradient-text">Case Studies</h2>
+            <p>Discover how sysfx has transformed businesses with our tailored tech solutions.</p>
+            <div class="case-study-grid">
+                <article class="case-study card-hover">
+                    <h3>Retail Chain Upgrade</h3>
+                    <p>Revamped a retail chain's network infrastructure, reducing downtime by 40%.</p>
+                    <button class="modern-button small" onclick="location.href='#contact'">Read More</button>
+                </article>
+                <article class="case-study card-hover">
+                    <h3>E-commerce Platform</h3>
+                    <p>Built a scalable e-commerce site, boosting sales by 25% in 3 months.</p>
+                    <button class="modern-button small" onclick="location.href='#contact'">Read More</button>
+                </article>
+            </div>
+        </section>
+
         <section id="testimonials" class="testimonials glass-morphism parallax">
             <h2 class="gradient-text">What Our Clients Say</h2>
             <p>Hear from businesses like yours who’ve transformed their tech with sysfx’s expertise.</p>
@@ -266,12 +284,44 @@
             <button class="modern-button" onclick="location.href='#contact'">Share Your Story</button>
         </section>
 
+        <!-- New Team Section -->
+        <section id="team" class="team glass-morphism parallax">
+            <h2 class="gradient-text">Meet Our Team</h2>
+            <p>Our skilled professionals are dedicated to delivering top-tier tech solutions.</p>
+            <div class="team-grid">
+                <article class="team-member card-hover">
+                    <h3>Nick Carter</h3>
+                    <p>Founder & Lead Technician</p>
+                    <p class="extra-info">15+ years in IT, specializing in repairs and cybersecurity.</p>
+                </article>
+                <article class="team-member card-hover">
+                    <h3>Sarah Lee</h3>
+                    <p>Web Development Expert</p>
+                    <p class="extra-info">Passionate about creating user-friendly, high-performance websites.</p>
+                </article>
+            </div>
+        </section>
+
         <section id="about" class="about glass-morphism parallax">
             <h2 class="gradient-text">About Us</h2>
             <p>sysfx is a team of experienced tech professionals dedicated to delivering top-notch solutions to our clients. With over 15 years of industry expertise, we specialize in computer repairs, cybersecurity, web development, networking, cloud solutions, and 24/7 IT support.</p>
             <p>Our mission is to empower businesses with innovative technology, ensuring precision, reliability, and exceptional customer service. Located in Clinton, CT, we serve clients across the region, helping them thrive in a digital-first world.</p>
             <p>Our core values include innovation, integrity, and client satisfaction, driving us to exceed expectations with every project.</p>
             <button class="modern-button" onclick="location.href='#contact'">Contact Us Today</button>
+        </section>
+
+        <!-- New Call to Action Banner -->
+        <section id="cta" class="cta glass-morphism parallax">
+            <h2 class="gradient-text">Ready to Transform Your Tech?</h2>
+            <p>Partner with sysfx for innovative solutions that drive your business forward.</p>
+            <div class="button-container">
+                <button class="modern-button primary" onclick="location.href='#contact'">
+                    <i class="fas fa-rocket" aria-hidden="true"></i> Start Now
+                </button>
+                <button class="modern-button secondary" onclick="location.href='#services'">
+                    <i class="fas fa-info-circle"></i> Learn More
+                </button>
+            </div>
         </section>
 
         <section id="contact" class="contact glass-morphism parallax">
@@ -364,7 +414,6 @@
         </div>
     </div>
 
-    <!-- Removed Chatbot (as requested) -->
     <!-- Floating Contact Button -->
     <button class="contact-btn" aria-label="Quick Contact" onclick="location.href='#contact'"><i class="fas fa-envelope"></i></button>
 </body>
