--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="sysfx - Professional tech solutions including repairs, security, web development, networking, cloud solutions, and IT support in Clinton, CT">
+    <meta name="keywords" content="tech solutions, computer repair, cybersecurity, web development, networking, cloud solutions, IT support, Clinton CT">
+    <meta name="author" content="sysfx">
     <title>sysfx - Sys Fix Tech Solutions</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -61,7 +63,7 @@
             </video>
             <div class="hero-content glass-morphism">
                 <h2 class="gradient-text">Welcome to sysfx!</h2>
-                <p>Unlock cutting-edge technology with Sys Fix—your trusted partner in repairs, security, web development, networking, cloud solutions, and IT support.</p>
+                <p class="hero-text">Unlock cutting-edge technology with Sys Fix—your trusted partner in repairs, security, web development, networking, cloud solutions, and IT support.</p>
                 <div class="button-container">
                     <button class="modern-button primary" onclick="location.href='#contact'">
                         <i class="fas fa-paper-plane" aria-hidden="true"></i> Get Started
@@ -312,7 +314,7 @@
 
         <!-- New Call to Action Banner -->
         <section id="cta" class="cta glass-morphism parallax">
-            <h2 class="gradient-text">Ready to Transform Your Tech?</h2>
+            <h2 class="cta-title">Ready to Transform Your Tech?</h2>
             <p>Partner with sysfx for innovative solutions that drive your business forward.</p>
             <div class="button-container">
                 <button class="modern-button primary" onclick="location.href='#contact'">
