--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico"> <!-- Added favicon placeholder -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12" defer></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="" defer></script>
@@ -87,7 +87,7 @@
             <button class="modern-button" onclick="location.href='#contact'">Request a Quote</button>
         </section>
 
-        <section id="location" class="glass-morphism parallax">
+        <section id="location" class="glass-morphism parallax location-section">
             <h2 class="gradient-text">Find Us in Clinton, CT</h2>
             <p>Visit our headquarters at 123 Main Street, Clinton, CT, or reach out for remote support. We serve clients across the region with top-tier tech solutions.</p>
             <div id="map" class="map-container" aria-label="Map showing sysfx location in Clinton, CT"></div>
@@ -96,7 +96,7 @@
 
         <section id="services" class="services glass-morphism parallax">
             <h2 class="gradient-text">Our Services</h2>
-            <p>sysfx offers a comprehensive suite of tech services to empower your business. From hardware fixes to cloud migrations, we’re here to solve your challenges with expertise and efficiency.</p>
+            <p class="services-text">sysfx offers a comprehensive suite of tech services to empower your business. From hardware fixes to cloud migrations, we’re here to solve your challenges with expertise and efficiency.</p>
             <div class="service-grid">
                 <article class="service card-hover" data-modal="computer-repair">
                     <i class="fas fa-laptop" aria-hidden="true"></i>
@@ -148,22 +148,22 @@
             <p>Explore our portfolio of successful projects, showcasing our expertise in tech solutions for businesses like yours.</p>
             <div class="gallery-grid">
                 <div class="gallery-item" data-src="https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80">
-                    <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Tech hardware repair project">
+                    <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Tech hardware repair project" loading="lazy">
                 </div>
                 <div class="gallery-item" data-src="https://images.unsplash.com/photo-1507679799989-0c83b7a86bb1?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80">
-                    <img src="https://images.unsplash.com/photo-1507679799989-0c83b7a86bb1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Networking setup installation">
+                    <img src="https://images.unsplash.com/photo-1507679799989-0c83b7a86bb1?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Networking setup installation" loading="lazy">
                 </div>
                 <div class="gallery-item" data-src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80">
-                    <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Web development project">
+                    <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Web development project" loading="lazy">
                 </div>
                 <div class="gallery-item" data-src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80">
-                    <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Cybersecurity implementation">
+                    <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Cybersecurity implementation" loading="lazy">
                 </div>
                 <div class="gallery-item" data-src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80">
-                    <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Cloud solution deployment">
+                    <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="Cloud solution deployment" loading="lazy">
                 </div>
                 <div class="gallery-item" data-src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80">
-                    <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="IT support session">
+                    <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="IT support session" loading="lazy">
                 </div>
             </div>
             <button class="modern-button" onclick="location.href='#contact'">View Full Portfolio</button>
@@ -240,7 +240,7 @@
             <button class="modern-button" onclick="location.href='#contact'">View All Events</button>
         </section>
 
-        <section id="case-studies" class="case-studies glass-morphism parallax">
+        <section id="case-studies" class="case-studies glass-morphism parallax compact-section">
             <h2 class="gradient-text">Case Studies</h2>
             <p>Discover how sysfx has transformed businesses with our tailored tech solutions.</p>
             <div class="case-study-grid">
@@ -286,7 +286,7 @@
             <button class="modern-button" onclick="location.href='#contact'">Share Your Story</button>
         </section>
 
-        <section id="team" class="team glass-morphism parallax">
+        <section id="team" class="team glass-morphism parallax compact-section">
             <h2 class="gradient-text">Meet Our Team</h2>
             <p>Our skilled professionals are dedicated to delivering top-tier tech solutions.</p>
             <div class="team-grid">
@@ -311,7 +311,7 @@
             <button class="modern-button" onclick="location.href='#contact'">Contact Us Today</button>
         </section>
 
-        <section id="cta" class="cta glass-morphism parallax">
+        <section id="cta" class="cta glass-morphism parallax compact-section">
             <h2 class="cta-title">Ready to Transform Your Tech?</h2>
             <p>Partner with sysfx for innovative solutions that drive your business forward.</p>
             <div class="button-container">
@@ -324,7 +324,7 @@
             </div>
         </section>
 
-        <section id="contact" class="contact glass-morphism parallax">
+        <section id="contact" class="contact glass-morphism parallax compact-section">
             <h2 class="gradient-text">Contact Us</h2>
             <p>Ready to elevate your tech with sysfx? Contact our team for a free consultation, quote, or support. We’re here to help 24/7!</p>
             <div class="contact-grid">
@@ -343,13 +343,6 @@
                     </div>
                 </div>
             </div>
-            <aside class="contact-sidebar">
-                <h3>Quick Contact</h3>
-                <p>Email: <a href="mailto:nick@sysfx.net" class="email-link" id="sidebar-email-link">nick@sysfx.net</a></p>
-                <p>Phone: <a href="tel:+18603754425" aria-label="Call sysfx at (860) 375-4425">(860) 375-4425</a></p>
-                <p>Address: 123 Main Street, Clinton, CT</p>
-                <button class="modern-button small" onclick="location.href='#contact'">Contact Now</button>
-            </aside>
             <button class="modern-button" onclick="location.href='mailto:nick@sysfx.net'">Send Email</button>
         </section>
     </main>
