--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     
     <!-- Audio Player -->
     <audio id="welcome-music" preload="auto">
-        <source src="https://cdn.x.ai/assets/windows-xp-welcome.mp3" type="audio/mpeg">
+        <source src="https://ia802208.us.archive.org/30/items/title_20240514_0432/title.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <button id="music-toggle" class="music-btn" aria-label="Toggle Music"><i class="fas fa-volume-up"></i></button>
