--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <button class="modern-button primary" onclick="location.href='#contact'">
                         <i class="fas fa-paper-plane" aria-hidden="true"></i> Get Started
                     </button>
-                    <button class="modern-button secondary" onclick="location.href='#services'">
+                    <button class="modern-button secondary explore-services" onclick="location.href='#services'">
                         <i class="fas fa-cogs"></i> Explore Services
                     </button>
                     <button id="darkModeToggle" class="modern-button" aria-label="Toggle dark mode">
@@ -88,7 +88,7 @@
         </section>
 
         <section id="location" class="glass-morphism parallax location-section">
-            <h2 class="gradient-text">Find Us in Clinton, CT</h2>
+            <h2 class="gradient-text centered-text">Find Us in Clinton, CT</h2>
             <p>Visit our headquarters at 123 Main Street, Clinton, CT, or reach out for remote support. We serve clients across the region with top-tier tech solutions.</p>
             <div id="map" class="map-container" aria-label="Map showing sysfx location in Clinton, CT"></div>
             <button class="modern-button" onclick="location.href='#contact'">Get Directions</button>
@@ -142,8 +142,8 @@
                 </article>
             </div>
             <div class="supported-badges">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Microsoft_Edge_logo_%282019%29.svg" alt="Windows Supported" class="badge" loading="lazy">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Apple_logo_black.svg" alt="Apple Supported" class="badge" loading="lazy">
+                <img src="https://cdn-icons-png.flaticon.com/512/732/732221.png" alt="Windows Supported" class="badge" loading="lazy">
+                <img src="https://cdn-icons-png.flaticon.com/512/2/2235.png" alt="Apple Supported" class="badge" loading="lazy">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" alt="Linux Supported" class="badge" loading="lazy">
             </div>
         </section>
@@ -291,23 +291,6 @@
             <button class="modern-button" onclick="location.href='#contact'">Share Your Story</button>
         </section>
 
-        <section id="team" class="team glass-morphism parallax compact-section">
-            <h2 class="gradient-text">Meet Our Team</h2>
-            <p>Our skilled professionals are dedicated to delivering top-tier tech solutions.</p>
-            <div class="team-grid">
-                <article class="team-member card-hover">
-                    <h3>Nick Carter</h3>
-                    <p>Founder & Lead Technician</p>
-                    <p class="extra-info">15+ years in IT, specializing in repairs and cybersecurity.</p>
-                </article>
-                <article class="team-member card-hover">
-                    <h3>Sarah Lee</h3>
-                    <p>Web Development Expert</p>
-                    <p class="extra-info">Passionate about creating user-friendly, high-performance websites.</p>
-                </article>
-            </div>
-        </section>
-
         <section id="about" class="about glass-morphism parallax">
             <h2 class="gradient-text">About Us</h2>
             <p>sysfx is a team of experienced tech professionals dedicated to delivering top-notch solutions to our clients. With over 15 years of industry expertise, we specialize in computer repairs, cybersecurity, web development, networking, cloud solutions, and 24/7 IT support.</p>
@@ -331,28 +314,6 @@
                     <i class="fas fa-info-circle"></i> Learn More
                 </button>
             </div>
-        </section>
-
-        <section id="contact" class="contact glass-morphism parallax tiny-section">
-            <h2 class="gradient-text">Contact Us</h2>
-            <p>Ready to elevate your tech with sysfx? Contact our team for a free consultation, quote, or support. We’re here to help 24/7!</p>
-            <div class="contact-grid">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope" aria-hidden="true"></i>
-                        <a href="#" class="email-link" id="email-link" aria-label="Email sysfx">Click to email</a>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone" aria-hidden="true"></i>
-                        <a href="tel:+18603754425" aria-label="Call sysfx at (860) 375-4425">(860) 375-4425</a>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
-                        <span>123 Main Street, Clinton, CT</span>
-                    </div>
-                </div>
-            </div>
-            <button class="modern-button" onclick="location.href='mailto:nick@sysfx.net'">Send Email</button>
         </section>
 
         <section class="blog-teaser glass-morphism parallax">
@@ -390,6 +351,28 @@
                 </div>
             </div>
         </section>
+
+        <section id="contact" class="contact glass-morphism parallax tiny-section">
+            <h2 class="gradient-text">Contact Us</h2>
+            <p>Ready to elevate your tech with sysfx? Contact our team for a free consultation, quote, or support. We’re here to help 24/7!</p>
+            <div class="contact-grid">
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="fas fa-envelope" aria-hidden="true"></i>
+                        <a href="#" class="email-link" id="email-link" aria-label="Email sysfx">Click to email</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone" aria-hidden="true"></i>
+                        <a href="tel:+18603754425" aria-label="Call sysfx at (860) 375-4425">(860) 375-4425</a>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                        <span>123 Main Street, Clinton, CT</span>
+                    </div>
+                </div>
+            </div>
+            <button class="modern-button" onclick="location.href='mailto:nick@sysfx.net'">Send Email</button>
+        </section>
     </main>
 
     <footer class="glass-morphism" role="contentinfo">
@@ -399,7 +382,6 @@
             <a href="https://facebook.com/sysfxtech" target="_blank" aria-label="Follow us on Facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://linkedin.com/company/sysfx" target="_blank" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
-        <button class="modern-button small" onclick="location.href='#contact'">Get in Touch</button>
     </footer>
 
     <!-- Service Modals -->
@@ -465,15 +447,15 @@
         <button id="close-tech-tip" class="close-btn" aria-label="Close Tech Tip">×</button>
     </div>
 
-    <!-- New Feature: Floating Chat Bubble -->
+    <!-- Floating Chat Bubble -->
     <div class="chat-bubble" id="chat-bubble">
         <span>Need help? Chat with us!</span>
     </div>
 
-    <!-- New Feature: Scroll-to-Top Button -->
+    <!-- Scroll-to-Top Button -->
     <button class="scroll-top-btn" aria-label="Scroll to Top"><i class="fas fa-arrow-up"></i></button>
 
-    <!-- New Feature: Easter Egg Trigger -->
+    <!-- Easter Egg Trigger -->
     <div class="easter-egg-trigger" aria-hidden="true"></div>
 </body>
 </html>
